playlists of folders

--- a/help.html
+++ b/help.html
@@ -15,6 +15,10 @@
                 <p>gets properties of a playlist with the id=<tt>ID</tt></p>
             </li>
             <li>
+                <p>/media/playlists/<tt>ID</tt>/playlists</p>
+                <p>gets list of playlists of a playlist folder with the id=<tt>ID</tt>. Errors if not a folder.</p>
+            </li>
+            <li>
                 <p>/media/playlists/<tt>ID</tt>/tracks</p>
                 <p>gets list of tracks of a playlist with the id=<tt>ID</tt></p>
                     </li>
