--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Ilcatraz by dsame</title>
+    <title>Ilcatraz - Escape from Apples jail!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,8 +14,7 @@
       <h1 class="project-name">Ilcatraz</h1>
       <h2 class="project-tagline">Mac OS X iTunes REST server</h2>
       <a href="https://github.com/dsame/iLcatraz" class="btn">View on GitHub</a>
-      <a href="https://github.com/dsame/iLcatraz/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/dsame/iLcatraz/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/dsame/iLcatraz/releases/download/1.4/iLcatraz.zip" class="btn">Download zipped ready to install application</a>
     </section>
 
     <section class="main-content">
