--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>If requests  have a result of an array of the resources the header <tt>X-Count</tt> contains length of the result. Use <tt>HEAD</tt> method to estimate the request cost.</p>
         <p>If requests  have a file as the result then  the header <tt>X-Location</tt> contains path of the file inside iTunes Library. Use <tt>HEAD</tt> method if necessary.</p>
 
-<p></p>
+<p>iLcatrz publishes itsel on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 
 
 <h3>
