--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>Having trouble with iLcatraz or some ideas? <a href="https://github.com/dsame/iLcatraz/issues">Create the issue</a> and will try help you.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/dsame/iLcatraz">Ilcatraz</a> is maintained by <a href="https://github.com/dsame">dsame</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/dsame/iLcatraz">Ilcatraz</a> is maintained by <a href="https://github.com/dsame">dsame</a> and sponsored by <a href="http://www.webloftdesigns.com/">Webloftdesigns</a>.</span>
 
       </footer>
 
