--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
 <p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
 
 <p>Resource request sample: <tt>http://localhost:8123/media/playlists/F84F6DB889F6AD62/tracks/23A23165199F41A6</tt></p>
+<div style="float:right;width: 130px;">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ilcatraz right -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:120px;height:600px"
+     data-ad-client="ca-pub-9887859087722117"
+     data-ad-slot="3941412789"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
         <ul>
             <li>
                 <p>/media/playlists</p>
