--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Ilcatraz - Escape from Apples jail!</title>
+<meta name="description" content="REST server exporting iTunes running on Mac OS X to any networking device via HTTP and Bonjour.">
+<meta name="keywords" content="REST,iTunes,Android,http,export,access,playlists,tracks">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -15,6 +17,7 @@
       <h2 class="project-tagline">Mac OS X iTunes REST server</h2>
       <a href="https://github.com/dsame/iLcatraz" class="btn">View on GitHub</a>
       <a href="https://github.com/dsame/iLcatraz/releases/download/1.4/iLcatraz.zip" class="btn">Download Application</a>
+      <a href="https://play.google.com/store/apps/details?id=me.dsa.ilcatraz.sync" class="btn">Sync tool for Android</a>
     </section>
 
     <section class="main-content">
