--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="project-name">Ilcatraz</h1>
       <h2 class="project-tagline">Mac OS X iTunes REST server</h2>
       <a href="https://github.com/dsame/iLcatraz" class="btn">View on GitHub</a>
-      <a href="https://github.com/dsame/iLcatraz/releases/download/1.4/iLcatraz.zip" class="btn">Download Application</a>
+      <a href="https://github.com/dsame/iLcatraz/releases/download/1.4/iLcatraz.zip" class="btn">Download Mac OS X Service</a>
       <a href="https://play.google.com/store/apps/details?id=me.dsa.ilcatraz.sync" class="btn">Sync tool for Android</a>
     </section>
 
