--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</section>
+    <section class="main-content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A way to escape Apple's jail.</h3>
 
 <p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
 
 <p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
-
+<h3>Features</h3>
 <p>Resource request sample: <tt>http://localhost:8123/media/playlists/F84F6DB889F6AD62/tracks/23A23165199F41A6</tt></p>
 <div style="float:right;width: 130px;">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -81,8 +83,9 @@
         <p>If requests  have a file as the result then  the header <tt>X-Location</tt> contains path of the file inside iTunes Library. Use <tt>HEAD</tt> method if necessary.</p>
 
 <p>iLcatrz publishes itsel on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
+</section>
 
-
+<section class="main-content">
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
