--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
 <p>iLcatrz publishes itsel on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 </section>
 
+<section class="main-content" itemscope itemtype="http://www.schema.org/Offer">
+<h3>Pricing</h3>
+<p>The service is free and always to be free. It's price is $<span itemprop=”price“>0</span> <meta itemprop="priceCurrency" content="USD" /></p>
+</section>
+
 <section class="main-content">
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
