--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <section class="main-content" itemscope itemtype="http://www.schema.org/Offer">
 <h3>Pricing</h3>
-<p>The service is free and always to be free. It's price is $<span itemprop=”price“>0</span> <meta itemprop="priceCurrency" content="USD" /></p>
+<p>The service is free and always to be free. It's price is $<span itemprop=”price“>0</span>.<meta itemprop="priceCurrency" content="USD" /></p>
 </section>
 
 <section class="main-content">
