--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <p>Last but not least: iLcatrz publishes itsel on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 </section>
 
-<section class="main-content" itemscope itemtype="http://www.schema.org/Offer">
+<section itemprop="offers" class="main-content" itemscope itemtype="http://www.schema.org/Offer">
 <h3>Pricing</h3>
 <p>The service is free and always to be free. It's price is $<strong itemprop="price">0</strong>.<meta itemprop="priceCurrency" content="USD" /></p>
 </section>
