--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Ilcatraz - Escape from Apples jail!</title>
 <meta name="description" content="REST server exporting iTunes running on Mac OS X to any networking device via HTTP and Bonjour.">
-<meta name="keywords" content="REST,iTunes,Android,http,export,access,playlists,tracks">
+<meta name="keywords" content="REST,iTunes,Android,http,export,access,playlists,tracks,API">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
