--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
 
 <p>iLcatraz is in its early stage. It is not intended to be used in the heavy multiuser environment and limited by the AppleScript engine capabilities. Don't report about server hungs on parallel reports or the retrieving big playlists: issue <tt>HEAD</tt> request to get the count of tracks before trying to get the playlist content.</p>
 
+<div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- iLcatraz in content -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9887859087722117"
+     data-ad-slot="1588218782"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 
 <p>Having trouble with iLcatraz or some ideas? <a href="https://github.com/dsame/iLcatraz/issues">Create the issue</a> and will try help you.</p>
 
