--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
 </section>
 
     <section class="main-content">
+<h3>Presentation</h3>
+<p>iLcatraz's lives silently in the menubar or in dock and 99.99% of time does not bother you at all.</p>
+<img src="menu.png"/>
+<p></p>
+<p>Only sometimes you might want to click the icon and change very few rudimentary settings.</p>
+<img src="prefs.png"/>
+</section>
+    <section class="main-content">
 <h3>Implementation details</h3>
 <p>We did not re-engineering native DAAP protocol to avoid license issues and its changes. Neither we parsed the XML database files.</p>
 <p>Instead iLcatraz runs AppleScript against running instance of iTunes and it looks nothing but ordinal client using completely legal protocol accessing iTunes. Besides legality we are sure the playlists and tracks are presented in the very same way as they would by iTunes itself.</p>
