--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <h3>Pricing</h3>
 <p>The service is free and always to be free. It's price is $<strong itemprop="price">0</strong>.<meta itemprop="priceCurrency" content="USD" /></p>
 </section>
+<div>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- iLcatraz in content -->
 <ins class="adsbygoogle"
@@ -127,6 +128,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 <section class="main-content">
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
