--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </ul>
 <p>Keep these issues in mind and do not try to use iLcatraz in the environment it does not fit to.</p>
 <p>
-<p>Last but not least: iLcatrz publishes itsel on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
+<p>Last but not least: iLcatraz publishes itself on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 </section>
 
 <section itemprop="offers" class="main-content" itemscope itemtype="http://www.schema.org/Offer">
