--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <p>If requests  have a result of an array of the resources the header <tt>X-Count</tt> contains length of the result. Use <tt>HEAD</tt> method to estimate the request cost.</p>
         <p>If requests  have a file as the result then  the header <tt>X-Location</tt> contains path of the file inside iTunes Library. Use <tt>HEAD</tt> method if necessary.</p>
 
+<p>iLcatraz publishes itself on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 </section>
 
     <section class="main-content">
@@ -110,8 +111,6 @@
 <li>Parallel requests may hang the service</p>
 </ul>
 <p>Keep these issues in mind and do not try to use iLcatraz in the environment it does not fit to.</p>
-<p>
-<p>Last but not least: iLcatraz publishes itself on Bonjour as <tt>_ilcatraz._tcp.</tt></p>
 </section>
 
 <section itemprop="offers" class="main-content" itemscope itemtype="http://www.schema.org/Offer">
