--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
 
 <p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
+<p>
+<a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</p>
 </section>
     <section class="main-content">
 <h3>Companion software</h3>
