--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A way to escape Apple's jail.</h3>
 
-<p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
-
-<p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
-<p>
+<div style="float:right">
 <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <div class="fb-share-button" data-href="http://ilcatraz.dsa.me/" data-layout="button"></div>
-</p>
+</div>
+<p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
+
+<p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
 </section>
     <section class="main-content">
 <h3>Companion software</h3>
