--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A way to escape Apple's jail.</h3>
 
 <div style="float:right">
+<div>
 <a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
 <div class="fb-share-button" data-href="http://ilcatraz.dsa.me/" data-layout="button"></div>
 </div>
 <p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
