--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     </section>
 
     <section class="main-content">
+<div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ilcatraz top -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9887859087722117"
+     data-ad-slot="2464679583"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 </section>
     <section class="main-content">
       <h3>
@@ -40,7 +51,6 @@
     <section class="main-content">
 <h3>Companion software</h3>
 <p>While the service is general purpose and is not intend to be used directly it was developed keeping in mind Android syncing tool and here it is: <a href="https://play.google.com/store/apps/details?id=me.dsa.ilcatraz.sync">IlcatrazSync</a>. It's must have app for those who have both Mac iTunes music collection and android handlets.
-<div class="fb-share-button" data-href="http://ilcatraz.dsa.me/" data-layout="button"></div>
 </section>
     <section class="main-content">
 <h3>Features</h3>
