--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ilcatraz - Escape from Apples jail!</title>
-<meta name="description" content="REST server exporting iTunes running on Mac OS X to any networking device via HTTP and Bonjour.">
+<meta name="description" content="REST server exporting iTunes running on Mac OS X via HTTP and Bonjour. Partically you can now sync your android device with iTunes collection.">
 <meta name="keywords" content="REST,iTunes,Android,http,export,access,playlists,tracks,API">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -31,9 +31,8 @@
 </div>
 <div class="fb-share-button" data-href="http://ilcatraz.dsa.me/" data-layout="button"></div>
 </div>
-<p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol.</p>
-
-<p>The service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that Mac.</p>
+<p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol. Particullary you can sync your Android with the iTUnes collection of tracks.</p>
+<p>Technically this web service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that iMac, MacBook, MacAir or Mac Mini.</p>
 </section>
     <section class="main-content">
 <h3>Companion software</h3>
