--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </div>
 <div class="fb-share-button" data-href="http://ilcatraz.dsa.me/" data-layout="button"></div>
 </div>
-<p itemprop="description">This lightweight service gives a way to access iTunes database from virtually any networked device without having to deal with the proprietary DAAP protocol. Particullary you can sync your Android with the iTUnes collection of tracks.</p>
-<p>Technically this web service launched on the Mac provides simple REST protocol to list and download iTunes playlists and tracks from that iMac, MacBook, MacAir or Mac Mini.</p>
+<p itemprop="description">This lightweight service gives a way to access <span itemprop="keywords">iTunes</span> database from virtually any networked device without having to deal with the proprietary DAAP protocol. Particullary you can <span itemprop="keywords">sync</span> your <span itemprop="keywords">Android</spam> with the iTunes collection of tracks.</p>
+<p>Technically this web service launched under <span itemprop="keywords">Mac OS X</span>provides simple <span itemprop="keywords">REST</span> protocol to list and download iTunes playlists and tracks from that iMac, MacBook, MacAir or Mac Mini.</p>
 </section>
     <section class="main-content">
 <h3>Companion software</h3>
