--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
 mixpanel.init("99fc91376a3a8c0a9e919244b149c833");</script><!-- end Mixpanel -->
 <script>
-mixpanel.track("Video play");
+mixpanel.track("iLcatraz");
 </script>
   </body>
 </html>
