--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <p>Having these benefits causes few significant drawbacks:</p>
 <ul>
 <li>iTunes always sits in the memory</li>
-<li>Requests are noticiable slow</li>
+<li>Requests are noticeable slow</li>
 <li>Requests that return too long, above 300 items, playlist may long forever</p>
 <li>Parallel requests may hang the service</p>
 </ul>
